--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cheerio": "^0.19.0",
     "express": "^4.13.4",
+    "nodemon": "^1.8.1",
     "request": "^2.67.0"
   }
 }
